namespaces/live.cloud-platform.service.justice.gov.uk/find-unclaimed-court-money-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: find-unclaimed-court-money-production
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "cdpt-find-unclaimed-court-money"
    cloud-platform.justice.gov.uk/application: "Find unclaimed court money"
    cloud-platform.justice.gov.uk/owner: "Central Digital Product Team: central-digital-product-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/find-unclaimed-court-money"
    cloud-platform.justice.gov.uk/team-name: "central-digital-product-team"
    cloud-platform.justice.gov.uk/review-after: ""
